<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:id="@+id/frameLayout"
    >


    <!--<include layout="@layout/content_welcome" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/welcomeTitle"
            android:text="@string/welcomeTitle"
            android:paddingTop="32dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            tools:text="@string/welcomeMessage2"
            android:text="@string/welcomeMessage2"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />



        <Button
            android:id="@+id/btnTakeSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/takesurvey"
            android:padding="0dp"
            android:layout_marginLeft="-16dp"
            android:layout_marginRight="-16dp"
            android:layout_marginBottom="-6dp"
            android:layout_marginTop="-16dp" />


    </LinearLayout>


</FrameLayout>
