<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity"
    android:id="@+id/coordinatorLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="32dp"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_email"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/etUsername_login"
                android:hint="@string/signup_email_hint"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="20"
                android:backgroundTint="@color/accent_material_light"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/etPin_login"
                android:layout_gravity="center_horizontal"
                android:hint="@string/pin_hint"
                android:password="true"
                android:textAlignment="center"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="6"
                android:numeric="integer"
                android:backgroundTint="@color/accent_material_light" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkboxRemember"
                    android:backgroundTint="@color/accent_material_light"
                    android:buttonTint="@color/accent_material_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember Username?"/>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/bLogin"
                android:layout_gravity="center_horizontal"
                android:onClick="logIn"/>


        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
